--- a/ref/css/styles.css
+++ b/ref/css/styles.css
@@ -1,3 +1,7 @@
+.blurred {
+    filter: blur(8px);
+    transition: filter 1s ease; 
+}
 
 * {cursor: url(https://cur.cursors-4u.net/others/oth-2/oth160.cur), auto !important;}
 
@@ -14,11 +18,6 @@ body {
     user-select: none;
     overflow: hidden;
 }
-
-        .blurred .background {
-            filter: blur(8px);
-            transition: filter 1s ease; 
-        }
 
 .overlay {
     position: fixed;
