--- a/ref/css/styles.css
+++ b/ref/css/styles.css
@@ -41,12 +41,13 @@ body {
 }
 
 .proceed-button {
-    background-color: transparent;
-    border: none;
-    font-size: 30px;
-    color: rgb(255, 255, 255);
-    position: fixed;
-    font-family: Arial, sans-serif;
+             color: rgb(255, 255, 255);
+            font-size: 32px;
+            font-weight: bold;
+            text-align: center;
+          font-family: Arial, sans-serif;
+            user-select: none; 
+    
     text-shadow: 0 0 5px rgba(255, 255, 255, 0.6),
                  0 0 10px rgba(255, 255, 255, 0.6),
                  0 0 15px rgba(255, 255, 255, 0.6),
