--- a/ref/css/styles.css
+++ b/ref/css/styles.css
@@ -1,12 +1,7 @@
-.blurred {
-    filter: blur(8px);
-    transition: filter 1s ease; 
-}
-
-#overlay {
-    opacity: 1;
-    transition: opacity 1s ease; 
-}
+        .blurred .background {
+            filter: blur(8px);
+            transition: filter 1s ease; 
+        }
 
 * {cursor: url(https://cur.cursors-4u.net/others/oth-2/oth160.cur), auto !important;}
 
@@ -25,33 +20,31 @@ body {
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: url('https://cdn.discordapp.com/attachments/1084669195247169576/1298051845796659241/7950d961-cfb5-4c47-a721-801b0ddee064.gif?ex=6718287c&is=6716d6fc&hm=2181114df0b4c79a68f3a21a0b3c919c80441b391aa1bccbf6648ecfda928a62&') no-repeat center center fixed;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-    font-family: Arial, sans-serif;
-    backdrop-filter: blur(30px); 
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 9999; 
+            transition: opacity 1s ease; 
 }
 
 .proceed-button {
-    color: white;
-    font-size: 32px;
-    font-weight: bold;
-    text-align: center;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 2px solid white;
-    border-radius: 15px;
-    cursor: pointer;
-    user-select: none;
-    transition: transform 0.3s ease, background-color 0.3s ease;
+             color: rgb(255, 255, 255);
+            font-size: 32px;
+            font-weight: bold;
+            text-align: center;
+          font-family: Arial, sans-serif;
+            user-select: none; 
+    
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.6),
+                 0 0 10px rgba(255, 255, 255, 0.6),
+                 0 0 15px rgba(255, 255, 255, 0.6),
+                 0 0 20px rgba(255, 255, 255, 0.6);
 }
 
 .proceed-button:hover {
