--- a/ref/css/styles.css
+++ b/ref/css/styles.css
@@ -55,6 +55,7 @@ body {
 }
 
 .blurred-box {
+    display: none;
     width: 600px;
     height: 400px;
     background: rgba(255, 255, 255, 0.075);
