--- a/ref/css/styles.css
+++ b/ref/css/styles.css
@@ -31,6 +31,7 @@ body {
             background: rgba(0, 0, 0, 0.5);
             z-index: 9999; 
             transition: opacity 1s ease; 
+        cursor: pointer; 
 }
 
 .proceed-button {
@@ -45,6 +46,7 @@ body {
                  0 0 10px rgba(255, 255, 255, 0.6),
                  0 0 15px rgba(255, 255, 255, 0.6),
                  0 0 20px rgba(255, 255, 255, 0.6);
+        pointer-events: none;
 }
 
 .proceed-button:hover {
