--- a/ref/css/styles.css
+++ b/ref/css/styles.css
@@ -122,15 +122,15 @@ body {
 }
 
 .profileBio {
-    position: absolute;
-    bottom: 90px; 
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-    font-size: 24px;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+   font-size: 1.5rem;
+   color: white;
+   margin-top: 25px;
+        bottom: 115px;
+   height: 40px;
+            overflow: hidden;
+            border-right: 2px solid;
+            white-space: nowrap;
+            letter-spacing: 2px;
 }
 
 .showcase {
