--- a/ref/css/styles.css
+++ b/ref/css/styles.css
@@ -121,7 +121,7 @@ body {
                  0 0 20px rgba(255, 255, 255, 0.6);
 }
 
-.profileBio {
+.static-text {
     position: absolute;
     bottom: 115px;
     color: white;
